# adonais

./: .drone.yml  Cargo.toml  README.md  bors.toml  google_scopes_justification.md  sample.json
.dependabot/: config.yml
scripts/: deploy  generate  serve  test
sync/: Cargo.toml  full.json
sync/adonais_core/: Cargo.toml
sync/adonais_core/src/: google.rs  keats.rs  lib.rs
sync/adonais_core/src/keats/: groups_parser.rs  mod.rs
sync/adonais_core/src/keats/groups_parser/: groups.pest  mod.rs  parser_nom.rs  parser_pest.rs
sync/adonais_sync/: Cargo.toml
sync/adonais_sync/src/: main.rs
sync/src/: keats.rs  lib.rs
ui/: .firebaserc  .gitignore  emulate
ui/public/: app.js  config.js  index.html  privacy.html  style.css  tos.html
ui/public/css/: style.css
