[package]
name = "adonais"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
reqwest = "0.9.20"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
