[package]
name = "adonais_core"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[dependencies]
chrono = { version = "0.4.9", features = ["wasmbind"] }
chrono-tz = "0.5.1"
data-encoding = "2.1.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
siphasher = "0.3.1"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"

[lib]
crate-type = ["lib", "cdylib"]
