[package]
name = "adonais_core"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.9", features = ["serde", "wasmbind"] }
chrono-tz = "0.5.1"
combine = { version = "3.8.1", optional = true }
data-encoding = "2.1.2"
nom = { version = "5.0.1", optional = true }
pest = { version = "2.1.2", optional = true }
pest_derive = { version = "2.1.0", optional = true }
serde = "1.0.101"
serde_derive = "1.0.102"
serde_json = "1.0.41"
siphasher = "0.3.1"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }

[features]
default = ["parser_nom"]

parser_combine = ["combine"]
parser_nom = ["nom"]
parser_pest = ["pest", "pest_derive"]

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"

[lib]
crate-type = ["lib", "cdylib"]
