[package]
name = "adonais_core"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde", "wasmbind"] }
chrono-tz = "0.5.1"
combine = { version = "4.4.0", optional = true }
data-encoding = "2.2.0"
nom = { version = "5.1.1", optional = true }
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
serde = "1.0.106"
serde_derive = "1.0.101"
serde_json = "1.0.51"
siphasher = "0.3.3"
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }

[features]
default = ["parser_nom"]

parser_combine = ["combine"]
parser_nom = ["nom"]
parser_pest = ["pest", "pest_derive"]

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"

[lib]
crate-type = ["lib", "cdylib"]
